test/tests/errors/error-valof-return-no-valof.sm
// true
// false
/**/
/**/

program {
    return x;
}